--- a/index.html
+++ b/index.html
@@ -3,27 +3,153 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="project How to learn">
+  <meta name="keywords" content="how, to, leran">
+  <meta name="author" content="Yaroslav Barbakov">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+    <div class="logo logo_place_header"><img src="images/logo_place_footer.svg" class="logo__image"></div>
     <header class="header">
-
+      <h1 class="header__title">Научиться учиться</h1>
+      <div class="header__description">
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать</a></p>
+    </div>
+    <img src="images/header-image.png" class="header__main-illustration" alt="Мальчик с собакой">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
+            Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, 
+            но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns_paragraph"><span class="two-columns__main-text_text_bold">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и 
+              захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h1 class="section-title section-title_space_top-l section-title_space_bottom">Цифры и факты</h1>
+        <p class="section-subtitle">Про учебу и мозг</p>
+        <div class="table table_space_bottom">
+          <div class="table__cell">
+            <h2 class="table__heading">86 миллиардов</h2>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">2.1 миллиарда</h2>
+            <p class="table__text">Число нуждающихся в повышении квалификации
+              <p class="table__text_type_author">Всемирный Банк, 2017</p></p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">1000 терабайт</h2>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">500 триллионов</h2>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">420 миллионов</h2>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+              <p class="table__text_type_author">Всемирный Банк, 2017</p></p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">17–20 лет</h2>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">1885 год</h2>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">1889 год</h2>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link" href="#">Подробнее</a>
       </section>
-
       <section class="kaufman">
+        <h1 class="section-title section-title_theme_dark section-title_space_top-s">Принципы обучуения</h1>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">1</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">2</h2>
+            <p class="table__text_theme_dark table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">3</h2>
+            <p class="table__text table__textg_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">4</h2>
+            <p class="table__text table__textg_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">5</h2>
+            <p class="table__text table__textg_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">6</h2>
+            <p class="table__text table__textg_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">7</h2>
+            <p class="table__text table__textg_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">8</h2>
+            <p class="table__text table__textg_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">9</h2>
+          <p class="table__text table__textg_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+          <h2 class="table__heading table__heading_theme_dark">10</h2>
+          <p class="table__text table__textg_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
+      <img src="images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy;Yaroslav Barbakov 2021</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <p class="footer__column-heading">О Практикуме</p>
+          <p class="footer__column-links">Главная</p>
+          <p class="footer__column-links">Концепция</p>
+          <p class="footer__column-links">Наставники</p>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <p class="footer__column-heading">Соцсети</p>
+          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/facebook_color_white.svg">Facebook</a>
+          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/vk_color_white.svg">ВКонтакте</a>
+          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/instagram_color_white.svg">Instagram</a>
+        </div>
+        
+      </div>
 
     </footer>
   </div>
