--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <div class="page">
-    <div class="logo logo_place_header"><img src="images/logo_place_footer.svg" class="logo__image"></div>
     <header class="header">
+      <div class="logo logo_place_header"><img src="images/logo_place_footer.svg" alt="Логотип" class="logo__image"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <div class="header__description">
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link global_link" href="#">Узнать</a></p>
