--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           </div>
           <div class="table__cell">
             <h2 class="table__heading">2.1 миллиарда</h2>
-            <p class="table__text">Число нуждающихся в повышении квалификации
-            <p class="table__text_type_author">Всемирный Банк, 2017</p></p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text_type_author">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
             <h2 class="table__heading">1000 терабайт</h2>
@@ -59,8 +59,8 @@
           </div>
           <div class="table__cell table__cell_space_bottom_zero">
             <h2 class="table__heading">420 миллионов</h2>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
-            <p class="table__text_type_author">Всемирный Банк, 2017</p></p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text_type_author">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell table__cell_space_bottom_zero">
             <h2 class="table__heading">17–20 лет</h2>
@@ -143,9 +143,9 @@
         </div>
         <div class="footer__column footer__column_content_social">
           <p class="footer__column-heading">Соцсети</p>
-          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/facebook_color_white.svg">Facebook</a>
-          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/vk_color_white.svg">ВКонтакте</a>
-          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/instagram_color_white.svg">Instagram</a>
+          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/facebook_color_white.svg" alt="F">Facebook</a>
+          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/vk_color_white.svg" alt="VK">ВКонтакте</a>
+          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/instagram_color_white.svg" alt="Inst">Instagram</a>
         </div>
       </div>
     </footer>
