--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         </div>
         <div class="footer__column footer__column_content_social">
           <p class="footer__column-heading">Соцсети</p>
-          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/facebook_color_white.svg" alt="F">Facebook</a>
-          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/vk_color_white.svg" alt="VK">ВКонтакте</a>
-          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/instagram_color_white.svg" alt="Inst">Instagram</a>
+          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/facebook_color_white.svg" alt="Ф">Facebook</a>
+          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/vk_color_white.svg" alt="ВК">ВКонтакте</a>
+          <a href="#" class="footer__column-links"><img class="footer__social-icons" src="images/instagram_color_white.svg" alt="Инст">Instagram</a>
         </div>
       </div>
     </footer>
