--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="images/logo_place_footer.svg" alt="Логотип" class="logo__image logo logo_place_header">
+      <img src="images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__description header__subtitle">Какие современные и эффективные подходы к обучению вы 
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы 
       можете использовать в своей жизни? <a class="header__link" href="#">Узнать→</a></p>
       <img src="images/header-image.png" class="header__main-illustration" alt="Мальчик с собакой">
       <div class="header__square-pic"></div>
@@ -38,7 +38,7 @@
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
-        <ul class="table table_space_bottom">
+        <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
@@ -56,20 +56,20 @@
             <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
-          <li class="table__cell table__cell_space_bottom_zero">
+          <li class="table__cell ">
             <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell table__cell_space_bottom_zero">
+          <li class="table__cell ">
             <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </li>
-          <li class="table__cell table__cell_space_bottom_zero">
+          <li class="table__cell ">
             <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </li>
-          <li class="table__cell table__cell_space_bottom_zero">
+          <li class="table__cell ">
             <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
@@ -82,7 +82,7 @@
       </section>
       <section class="kaufman">
         <div class="kaufman__triangle"></div>
-        <h2 class="section-title section-title_theme_dark section-title_space_top-s">Принципы обучуения</h2>
+        <h2 class="section-title section-title_theme_dark">Принципы обучуения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
@@ -91,39 +91,39 @@
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
-            <p class="table__text_theme_dark table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
-            <p class="table__text table__textg_theme_dark">Определите целевой уровень мастерства.</p>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
-            <p class="table__text table__textg_theme_dark">Разбейте навык на элементы.</p>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
-            <p class="table__text table__textg_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__cell_space_bottom_zero">
+          <li class="table__cell table__cell_theme_dark ">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
-            <p class="table__text table__textg_theme_dark">Устраните препятствия для занятий.</p>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__cell_space_bottom_zero">
+          <li class="table__cell table__cell_theme_dark ">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
-            <p class="table__text table__textg_theme_dark">Выделите специальное время для занятий.</p>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__cell_space_bottom_zero">
+          <li class="table__cell table__cell_theme_dark ">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
-            <p class="table__text table__textg_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__cell_space_bottom_zero">
+          <li class="table__cell table__cell_theme_dark ">
           <h3 class="table__heading table__heading_theme_dark">9</h3>
-          <p class="table__text table__textg_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__cell_space_bottom_zero">
+          <li class="table__cell table__cell_theme_dark ">
           <h3 class="table__heading table__heading_theme_dark">10</h3>
-          <p class="table__text table__textg_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
       </section>
@@ -135,7 +135,7 @@
           <p class="footer__author">&copy;Yaroslav Barbakov 2021</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <h2 class="footer__column-heading footer__column-link">О Практикуме</h2>
+          <h2 class="footer__column-heading">О Практикуме</h2>
           <nav class="footer__column-links">
             <a class="footer__column-link" href="#">Главная</a>
             <a class="footer__column-link" href="#">Концепция</a>
