--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="description" content="Научиться учиться">
   <meta name="keywords" content="how, to, leran">
   <meta name="author" content="Yaroslav Barbakov">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -34,7 +33,66 @@
           </div>
         </article>
       </section>
-
+      <section class="techniques"> 
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" alt="Кинга в руках" src="images/cards-attention.png">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" alt="Статуя" src="images/cards-recall.png">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" alt="Арка" src="images/cards-interliving.png">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" alt="Комната" src="images/cards-question.png">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" alt="Книги" src="images/cards-competence.png">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <ul class="video__iframes">
+          <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
+            title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+          </li>
+          <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+            title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+          </li>
+        </ul>
+      </section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным 
+              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, 
+              да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. 
+              И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши 
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </article>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link global_link" href="#">Подробнее</a>
+      </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
@@ -75,10 +133,23 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link global_link" href="#">Подробнее</a>
+      <section class="khan">
+          <article lass="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__title">Весь мир — школа</h2>
+            <blockquote class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов 
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, 
+              кто занимается образованием — так учащиеся повсюду смогут получить 
+              навыки и знания, которые приносят успех в школе, карьере и жизни.
+            </blockquote>
+              <p class="khan__quote-author">Джордж Лукас</p>
+              <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <img src="images/khan-book.jpg" class="khan__book-pic" alt="Книга Весь мир - Школа">
+              <a class="khan__buy-link" href="#">Купить книгу</a>
+            </div>
+          </article>
       </section>
       <section class="kaufman">
         <div class="kaufman__triangle"></div>
@@ -125,6 +196,16 @@
           <h3 class="table__heading table__heading_theme_dark">10</h3>
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
+        </ul>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li><img src="images/logo/resources-arzamas.svg" alt="Арзамас Лого" class="resources__logo"></li>
+          <li><img src="images/logo/resources-n1.svg" alt="Н + 1 Лого" class="resources__logo"></li>
+          <li><img src="images/logo/resources-strelka.svg" alt="Стрелка Лого" class="resources__logo"></li>
+          <li><img src="images/logo/resources-polka.svg" alt="Полка Лого" class="resources__logo"></li>
         </ul>
       </section>
     </main>
