--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </ul>
       </section>
       <section class="khan">
-          <article lass="khan__container">
+          <article class="khan__container">
             <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир — школа</h2>
             <blockquote class="khan__quote">
