--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <ul class="video__iframes">
-          <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
-            title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+          <li class="video__iframe"><iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
+            title="YouTube video player" allowfullscreen></iframe>
           </li>
-          <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
-            title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+          <li class="video__iframe"><iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
+            title="YouTube video player" allowfullscreen></iframe>
           </li>
         </ul>
       </section>
