--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link global_link" href="#">Подробнее</a>
+        <a class="feynman__link" href="#">Подробнее</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
