--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_header">
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы 
       можете использовать в своей жизни? <a class="header__link" href="#">Узнать→</a></p>
-      <img src="images/header-image.png" class="header__main-illustration" alt="Мальчик с собакой">
-      <div class="header__square-pic"></div>
+      <img src="./images/header-image.png" class="header__main-illustration" alt="Мальчик с собакой">
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -152,7 +152,7 @@
           </article>
       </section>
       <section class="kaufman">
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
         <h2 class="section-title section-title_theme_dark">Принципы обучуения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
@@ -202,10 +202,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li><img src="images/logo/resources-arzamas.svg" alt="Арзамас Лого" class="resources__logo"></li>
-          <li><img src="images/logo/resources-n1.svg" alt="Н + 1 Лого" class="resources__logo"></li>
-          <li><img src="images/logo/resources-strelka.svg" alt="Стрелка Лого" class="resources__logo"></li>
-          <li><img src="images/logo/resources-polka.svg" alt="Полка Лого" class="resources__logo"></li>
+          <li><a class="resources__logo" href="#"><img src="images/logo/resources-arzamas.svg" alt="Арзамас Лого"></a></li>
+          <li><a class="resources__logo" href="#"><img src="images/logo/resources-n1.svg" alt="Н + 1 Лого" class="resources__logo"></a></li>
+          <li><a class="resources__logo" href="#"><img src="images/logo/resources-strelka.svg" alt="Стрелка Лого"></a></li>
+          <li><a class="resources__logo" href="#"><img src="images/logo/resources-polka.svg" alt="Полка Лого"></a></li>
         </ul>
       </section>
     </main>
@@ -226,9 +226,9 @@
         <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img class="footer__social-icons" src="images/facebook_color_white.svg" alt="Ф">Facebook</a>
-            <a href="#" class="footer__column-link"><img class="footer__social-icons" src="images/vk_color_white.svg" alt="ВК">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img class="footer__social-icons" src="images/instagram_color_white.svg" alt="Инст">Instagram</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Ф">Facebook</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВК">ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Инст">Instagram</a>
           </div>
         </div>
       </div>
