--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Научиться учиться</title>
 </head>
 <body>
-  <div class="page">
+  <div class="root">
     <header class="header">
       <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
